@@ -6,7 +6,8 @@ Changes in version 1.22
 - Added a $AUTH_ATTEMPTS control to twoftpd-auth to limit the number of
   authentication attempts per session.
 
-- Fixed listing files with special characters in their names.
+- Rewrote the directory listing code to fix listing files with special
+  characters in their names.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
